fix: 350 opt in text

--- a/user_gjrg_optins.html
+++ b/user_gjrg_optins.html
@@ -7,7 +7,7 @@
 <div id="id_action_gjrg_350_optin_box" class="input-radio ak-input-type-action text-white" style="display: none;">
   <label id="gjrg_350_optin_question" for="id_action_gjrg_350_optin_optin"><br>
     {% filter ak_text:"gjrg_350_optin_question" %}
-    You are signing up to receive email updates about the Global Just Recovery Gathering. Would you Like to hear about other ways you can get involved with 350.org?
+    You are signing up to receive email updates about the Global Just Recovery Gathering. Would you like to hear about other ways you can get involved with 350.org?
     {% endfilter %}
   </label>
   <span class="ak-userfield-radio-set">
