--- a/donate.html
+++ b/donate.html
@@ -1105,7 +1105,7 @@
         );
       }
     });
-    });
+  });
   
   /* Currency symbols */
 
@@ -1168,6 +1168,7 @@
       $('.cards-non-us').show();
       $('.cards-us').hide();
     }
+  }
     function shipping_country_change() {
         if ( $('#shipping_country').val() == 'United States' ) {
             $('.ak-us-shipping-fields').show();
@@ -1348,7 +1349,7 @@
   }
 
   function change_step_one_label(current_step) {
-    // change amount label if step 1 is complete
+    {% comment %} // change amount label if step 1 is complete
     if (current_step === "1") {
       var amount_container = $('li.ak-amount-container label.ak-radio-checked');
       var amount = document.querySelector('li.ak-amount-container>label>span.ak-currency-sym').innerHTML;
@@ -1370,7 +1371,7 @@
       .find('span.ak-amount-label')
       // .html(amount+'<span class="ak-donation-monthly">/mo</span>')
       .html(amount)
-      .css({ "text-decoration": "underline" });
+      .css({ "text-decoration": "underline" }); {% endcomment %}
   }
 
   let step_has_errors = false;
