--- a/wrapper.html
+++ b/wrapper.html
@@ -135,6 +135,7 @@
 	<meta name="twitter:site:id" content="{{ templateset.custom_fields.site_url }}" />
 
 	{% block meta_additions %}{% endblock %}
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	<!-- Mapbox GL Source -->
 	<script src='https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js'></script>
 	<link href='https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css' rel='stylesheet' />
