--- a/petition.html
+++ b/petition.html
@@ -85,3 +85,7 @@ var akFollowupPage = "{{ page.followup.url }}";
 </section>
 {% include "./afteraction-share.html" %}
 {% endblock %}
+
+<script>
+  console.log('test fa 03/21');
+</script>
