--- a/petition.html
+++ b/petition.html
@@ -81,6 +81,7 @@ var akFollowupPage = "{{ page.followup.url }}";
 </script>
 </section>
 {% if page.custom_fields.form_include_mobile_optin == 'Y' and user.custom_fields.mobile_subscriber != 'true' %}
+
 <script>
 jQuery(function(){
   function showMobileFields() {
@@ -95,7 +96,11 @@ jQuery(function(){
     }
     // add mobile subscriber checkbox if not already added, or show if already added
     if (!jQuery('#id_user_mobile_subscriber_box').length) {
-      jQuery('#id_mobile_phone_box').after(jQuery('<div id="id_user_mobile_subscriber_box" class="input-checkbox ak-input-type-custom  ak-err-below"><span class="ak-userfield-checkbox-set"><label class="ak-userfield-checkbox-choice"><input type="checkbox" name="user_mobile_subscriber" id="id_user_mobile_subscriber_true" class="ak-userfield-input" value="true"> {% filter ak_text:"sms_privacy_optin" %}Keep me updated by SMS*{% endfilter %}</label> </span></div>'));
+			var smsOptInLanguage = '{% filter ak_text:"sms_privacy_optin" %}Keep me updated by SMS*{% endfilter %}';
+			if ('{{ page.custom_fields.form_label_text_sms_optin }}') {
+				smsOptInLanguage = '{{ page.custom_fields.form_label_text_sms_optin }}'
+			}
+      jQuery('#id_mobile_phone_box').after(jQuery('<div id="id_user_mobile_subscriber_box" class="input-checkbox ak-input-type-custom  ak-err-below"><span class="ak-userfield-checkbox-set"><label class="ak-userfield-checkbox-choice"><input type="checkbox" name="user_mobile_subscriber" id="id_user_mobile_subscriber_true" class="ak-userfield-input" value="true"> '+smsOptInLanguage+'</label> </span></div>'));
       jQuery('#id_user_mobile_subscriber_true').on('change', function(){
         // if subscriber opt in checkbox is checked, and country is US, include mobile subscriber number in submission
         // otherwise, exclude mobile subscriber number from submission
