--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -8,6 +8,52 @@ Custom template for same-page post-AJAX submit share ask.
 {% if page.custom_fields.after_action_next_step != "page-redirect" %}
 	{% if page.lang.iso_code = "en" %}
 
+<style>
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 27.5px;
+	height: 27.5px;
+}
+.loader {
+  display:block;
+  overflow: hidden;
+  margin: 0 auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 0.5em solid rgba(255, 255, 255, 0.2);
+	border-right: 0.5em solid rgba(255, 255, 255, 0.2);
+	border-bottom: 0.5em solid rgba(255, 255, 255, 0.2);
+	border-left: 0.5em solid #fff;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+</style>
+
 <div id="afteraction-progress-meter" aria-hidden="true" class="section text-small text-strong width-wide text-center padding-tiny bg-dkgray-trans" style="display:none;position:fixed;top:0;left:0;width:100%;z-index:10;">
 	<span id="afteraction-progress-meter-step1" class="afteraction-progress-meter-step">
 		<span class="afteraction-progress-meter-dot complete icon" data-icon="&#xE942;"></span>
@@ -334,6 +380,16 @@ jQuery(document).ready(function($){
 			setTimeout(function() {
 				// if no errors...
 				if( $(".ak-err li").length < 1) {
+					// show loading wheel in submit button
+					if (!$('.input-submit button[type="submit"] .loader').length) {
+						$('.input-submit button[type="submit"]').wrapInner('<span class="submit-button-text"><\/span>');
+						$('.input-submit button[type="submit"]').append($('<span class="loader">'));
+					}
+					$('.submit-button-text').css({
+						'opacity': '0',
+						'position': 'absolute'
+					});
+					$('.loader').show();
 					$.ajax({
 						method: 'POST',
 						url: $('#action-form').attr('action'),
@@ -348,6 +404,12 @@ jQuery(document).ready(function($){
 						}
 						// save country for currency feature (needed for country prefill issue - FA)
 						userCountry = $('#country').val();
+						// hide the loading wheel
+						$('.submit-button-text').css({
+							'opacity': '1',
+							'position': 'relative'
+						});
+						$('.loader').hide();
 						// show the share ask
 						afteractionShowShareAsk();
 						// if user opts to share, show share dialog
@@ -372,6 +434,12 @@ jQuery(document).ready(function($){
 					})
 					.fail(function(){
 							console.log('Error: AK AJAX submission failed.');
+							// hide the loading wheel
+							$('.submit-button-text').css({
+								'opacity': '1',
+								'position': 'relative'
+							});
+							$('.loader').hide();
 					});
 				}
 			}, 150);
