Add in hide paypal option

--- a/donate.html
+++ b/donate.html
@@ -128,7 +128,13 @@
   #ak-currency-switcher {
     max-width: initial;
   }
+
 </style>
+{% if templateset.custom_fields.donate_hide_paypal === "Y" %}
+<style>
+  .paypal-title{ display: none;}
+</style>
+{% endif %}
 
 <section id="action-lead"
   class="section donate-lead action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
@@ -837,8 +843,8 @@
                       {% endautoescape %}
                     </div>
                     {% endif %}
-
-                    {% if show_paypal or page.custom_fields.donation_only_paypal or page.custom_fields.donation_only_paypal.strip|lower == 'y' %}
+                    {{page.hide_paypal}} HEre??
+                    {% if show_paypal or page.custom_fields.donation_only_paypal or page.custom_fields.donation_only_paypal.strip|lower == 'y' or not page.custom_fields.hide_paypal %}
                     <div class="ak-payment-options text-center ak-donate-area-step-3 paypal-fields">
                       <input type="hidden" name="paypal" value="0" id="ak-pay-by-paypal">
                       <p class="margin-bottom-small text-small">
