--- a/wrapper.html
+++ b/wrapper.html
@@ -135,6 +135,7 @@
 	<meta name="twitter:site:id" content="{{ templateset.custom_fields.site_url }}" />
 
 	{% block meta_additions %}{% endblock %}
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	<!-- Mapbox GL Source -->
 	<script src='https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js'></script>
 	<link href='https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css' rel='stylesheet' />
@@ -194,6 +195,8 @@
   integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
   crossorigin="anonymous"></script>
 	<script type="text/javascript" src="https://act.350.org/resources/actionkit.js"></script>
+		<!--Recaptcha-->
+	   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	<!--Timepicker JS-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 	<!--[if lte IE 9]>
