Survey page alignment changes

--- a/survey.html
+++ b/survey.html
@@ -66,5 +66,22 @@
 	</script>
 </section>
 
+<style>
+	label.ak-survey-radio-choice {
+		align-items: center;
+	}
+	label.ak-survey-checkbox-choice input {
+		top: 0.15em;
+	}
+	.survey-question > label {
+		padding-left: 0;
+	}
+	.ak-survey-radio-set {
+		padding-left: 12px;
+	}
+	.ak-survey-checkbox-set {
+    padding-left: 8px;
+	}
+</style>
 
 {% endblock %}
