--- a/petition.html
+++ b/petition.html
@@ -33,7 +33,12 @@
 			</div>
 			<p class="no-js-hidden nojs-hide petition-text-link text-small">
 				<a href="" class="js-modal text-small icon-before icon-faded text-underline-none" data-icon="&#xe913;" data-modal-source="#petition-text">
-					{% filter ak_text:'petition_link_text' %}View the full petition text.{% endfilter %}</a>
+					{% if page.custom_fields.page_petition_label_viewfulltext %}
+						{{ page.custom_fields.page_petition_label_viewfulltext }}
+					{% else %}
+						{% filter ak_text:'petition_link_text' %}View the full petition text.{% endfilter %}
+					{% endif %} 
+				</a>
 			</p>
 			<div class="js-hidden js-hide box box-big text-small bg-white">
 				<div id="petition-text">
@@ -81,7 +86,8 @@ var akFollowupPage = "{{ page.followup.url }}";
 </script>
 </section>
 
-{% if page.custom_fields.form_include_mobile_optin == 'Y' %}
+{% if page.custom_fields.form_include_mobile_optin == 'Y' and user.custom_fields.mobile_subscriber != 'true' %}
+
 <script>
 jQuery(function(){
   function showMobileFields() {
@@ -96,7 +102,11 @@ jQuery(function(){
     }
     // add mobile subscriber checkbox if not already added, or show if already added
     if (!jQuery('#id_user_mobile_subscriber_box').length) {
-      jQuery('#id_mobile_phone_box').after(jQuery('<div id="id_user_mobile_subscriber_box" class="input-checkbox ak-input-type-custom  ak-err-below"><span class="ak-userfield-checkbox-set"><label class="ak-userfield-checkbox-choice"><input type="checkbox" name="user_mobile_subscriber" id="id_user_mobile_subscriber_true" class="ak-userfield-input" value="true"> {% filter ak_text:"sms_privacy_optin" %}Keep me updated by SMS*{% endfilter %}</label> </span></div>'));
+			var smsOptInLanguage = '{% filter ak_text:"sms_privacy_optin" %}Keep me updated by SMS*{% endfilter %}';
+			if ('{{ page.custom_fields.form_label_text_sms_optin }}') {
+				smsOptInLanguage = '{{ page.custom_fields.form_label_text_sms_optin }}'
+			}
+      jQuery('#id_mobile_phone_box').after(jQuery('<div id="id_user_mobile_subscriber_box" class="input-checkbox ak-input-type-custom  ak-err-below"><span class="ak-userfield-checkbox-set"><label class="ak-userfield-checkbox-choice"><input type="checkbox" name="user_mobile_subscriber" id="id_user_mobile_subscriber_true" class="ak-userfield-input" value="true"> '+smsOptInLanguage+'</label> </span></div>'));
       jQuery('#id_user_mobile_subscriber_true').on('change', function(){
         // if subscriber opt in checkbox is checked, and country is US, include mobile subscriber number in submission
         // otherwise, exclude mobile subscriber number from submission
@@ -164,11 +174,12 @@ jQuery(function(){
       no();
     }
   }
-  
+
   // add sms privacy notice
   var $smsPrivacyNotice = jQuery('<div class="sms-privacy-notice text-small2 margin-top-normal" style="display:none;"><p>{% filter ak_text:"sms_privacy_notice" %}By providing your mobile number you consent to receive automated recurring text messages from 350.org. Msg&data rates may apply. Text HELP for info or STOP to opt out to 83224. 350.org/mobile-tos{% endfilter %}</p></div>');
   jQuery('.general-privacy-notice').after($smsPrivacyNotice);
-  
+
+
   var selectedCountry = jQuery('#country').val();
   ifCountryIsUS(selectedCountry, showMobileFields, hideMobileFields);
   ifUSMobileIsProvided(selectedCountry, includeMobSubscriberInFormSubmission, excludeMobSubscriberInFormSubmission);
@@ -178,23 +189,33 @@ jQuery(function(){
     ifCountryIsUS(selectedCountry, showMobileFields, hideMobileFields);
     ifUSMobileIsProvided(selectedCountry, includeMobSubscriberInFormSubmission, excludeMobSubscriberInFormSubmission);
   });
-  
+
 });
 </script>
 {% endif %}
 
 {% if page.custom_fields.form_bigger_radio_buttons == 'Y' %}
 <style>
-  .ak-privacy.large-radios .input-radio-group .input-radio {
+	.input-radio.large-radios,
+	.input-radio.large-radios .ak-userfield-radio-choice,
+	.input-checkbox.large-checkboxes,
+	.input-checkbox.large-checkboxes .ak-userfield-checkbox-choice {
+		display: block;
+	}
+  .ak-privacy.large-radios .input-radio-group .input-radio,
+	.input-radio.ak-input-type-action.large-radios .ak-userfield-radio-choice,
+	.input-checkbox.ak-input-type-action.large-checkboxes .ak-userfield-checkbox-choice {
 	  position: relative;
 	  margin-bottom: 10px;
 	}
-	.ak-privacy.large-radios .input-radio-group .input-radio:last-child {
-		padding-bottom: ;
+	.ak-privacy.large-radios .input-radio-group .input-radio:last-child,
+	.input-radio.ak-input-type-action.large-radios .ak-userfield-radio-choice:last-child,
+	.input-checkbox.ak-input-type-action.large-checkboxes .ak-userfield-checkbox-choice:last-child {
 		margin-bottom: 25px;
 	}
 
-	.ak-privacy.large-radios .input-radio-group input[type="radio"] {
+	.ak-privacy.large-radios .input-radio-group input[type="radio"],
+	.input-radio.ak-input-type-action.large-radios input[type="radio"] {
 	  position: absolute;
 	  opacity: 0;
 	  cursor: pointer;
@@ -203,13 +224,19 @@ jQuery(function(){
 	  -webkit-appearance: none;
 	}
 
-	.ak-privacy.large-radios .input-radio-group input[type="radio"] + label {
+	.ak-privacy.large-radios .input-radio-group input[type="radio"] + label,
+	.input-radio.ak-input-type-action.large-radios .ak-userfield-radio-set label,
+	.input-checkbox.ak-input-type-action.large-checkboxes .ak-userfield-checkbox-set label {
 	  padding-left: 35px;
-	  font-size: 1.175em;
-	  display: inline-block;
+		margin-left: 0;
+		font-weight: bold;
+	}
+	.ak-privacy.large-radios .input-radio-group input[type="radio"] + label {
+		display: inline-block;
 	}
 
-	.ak-privacy.large-radios .input-radio-group input[type="radio"] + label:before {
+	.ak-privacy.large-radios .input-radio-group input[type="radio"] + label:before,
+	.input-radio.ak-input-type-action.large-radios .ak-userfield-radio-set .larger-radios-choice-label:before {
 	  content: "";
 	  height: 25px;
 	  width: 25px;
@@ -222,52 +249,130 @@ jQuery(function(){
 	  left:0;
 	}
 
-	.ak-privacy.large-radios .input-radio-group input[type="radio"]:checked + label:before {
+	.ak-privacy.large-radios .input-radio-group input[type="radio"]:checked + label:before,
+	.input-radio.ak-input-type-action.large-radios .ak-userfield-radio-set input[type="radio"]:checked + .larger-radios-choice-label:before {
 	  height: 10px;
 	  width: 10px;
 	  background-color: white;
 	  border: 9px solid #3b88fd;
 	}
 
-	.ak-privacy.large-radios .input-radio-group input[type="radio"]:focus +label:before {
+	.ak-privacy.large-radios .input-radio-group input[type="radio"]:focus +label:before,
+	.input-radio.ak-input-type-action.large-radios .ak-userfield-radio-set input[type="focus"]:checked + .larger-radios-choice-label:before {
 	  outline: auto 2px Highlight;
 	  outline: -webkit-focus-ring-color auto 5px;
 	}
-  
+
 	.ak-privacy.large-radios .input-radio-group label {
 	  font-size: 1.175em;
 	}
-  .ak-privacy.large-radios #ak-fieldbox-privacy_notice {
-    font-size: 0.99875em;
+	.input-radio.ak-input-type-action.large-radios .ak-userfield-radio-set label,
+	.input-checkbox.ak-input-type-action.large-checkboxes .ak-userfield-checkbox-set label {
+		font-size: 15.98px;
+	}
+  .ak-privacy.large-radios #ak-fieldbox-privacy_notice,
+	.input-radio.ak-input-type-action.large-radios > label,
+	.input-checkbox.ak-input-type-action.large-checkboxes > label
+	 {
+    font-size: 0.99875em !important;
+		font-weight: normal !important;
+		margin-left: 0;
   }
-  
+
+	.large-checkboxes.input-checkbox {
+		padding-left: 0;
+	}
+	.large-checkboxes.input-checkbox input {
+		position: absolute;
+		opacity: 0;
+		cursor: pointer;
+		height: 0;
+		width: 0;
+	}
+	.checkmark {
+		position: absolute;
+		top: 5px;
+		left: 0;
+		height: 25px;
+		width: 25px;
+		background-color: #eee;
+	}
+	.large-checkboxes.input-checkbox input:checked ~ .checkmark {
+		background-color: #3b88fd;
+	}
+	.checkmark:after {
+		content: "";
+		position: absolute;
+		display: none;
+	}
+	.large-checkboxes.input-checkbox input:checked ~ .checkmark:after {
+		display: block;
+	}
+	.large-checkboxes.input-checkbox .checkmark:after {
+		left: 9px;
+		top: 5px;
+		width: 5px;
+		height: 10px;
+		border: solid white;
+		border-width: 0 3px 3px 0;
+		-webkit-transform: rotate(45deg);
+		-ms-transform: rotate(45deg);
+		transform: rotate(45deg);
+	}
+
   @media screen and (min-width: 650px) {
-    .ak-privacy.large-radios .input-radio-group input[type="radio"] + label:before {
+    .ak-privacy.large-radios .input-radio-group input[type="radio"] + label:before,
+		.input-radio.ak-input-type-action.large-radios .ak-userfield-radio-set .larger-radios-choice-label:before {
       height: 18px;
 	    width: 18px;
     }
-    .ak-privacy.large-radios .input-radio-group input[type="radio"]:checked + label:before {
+    .ak-privacy.large-radios .input-radio-group input[type="radio"]:checked + label:before,
+		.input-radio.ak-input-type-action.large-radios .ak-userfield-radio-set input[type="radio"]:checked + .larger-radios-choice-label:before {
       height: 8px;
 	    width: 8px;
 	    border: 6px solid #3b88fd;
     }
-    
-    .ak-privacy.large-radios .input-radio-group label,
-    .ak-privacy.large-radios .input-radio-group input[type="radio"] + label {
+
+		.checkmark {
+			height: 18px;
+			width: 18px;
+		}
+		.large-checkboxes.input-checkbox .checkmark:after {
+			left: 6px;
+			top: 2px;
+			width: 3px;
+			height: 8px;
+		}
+
+    .ak-privacy.large-radios .input-radio-group input[type="radio"] + label{
       font-size: 1.1em;
     }
-    .ak-privacy.large-radios #ak-fieldbox-privacy_notice {
-      font-size: 0.935em;
+		.input-radio.ak-input-type-action.large-radios .ak-userfield-radio-set label,
+		.input-checkbox.ak-input-type-action.large-checkboxes .ak-userfield-checkbox-set label {
+			font-size: 14.96px;
+			padding-left: 28px;
+		}
+    .ak-privacy.large-radios #ak-fieldbox-privacy_notice,
+		.input-radio.ak-input-type-action.large-radios > label,
+		.input-checkbox.ak-input-type-action.large-checkboxes > label {
+      font-size: 0.935em !important;
     }
-    .ak-privacy.large-radios .input-radio-group input[type="radio"] + label {
+    .ak-privacy.large-radios .input-radio-group input[type="radio"] + label,
+		.input-radio.ak-input-type-action.large-radios .ak-userfield-radio-set label {
       padding-left: 28px;
     }
   }
- 
+
 </style>
 <script>
 	jQuery(function(){
-		jQuery('.ak-privacy').addClass('large-radios');
+		jQuery('.ak-privacy, #unknown_user .input-radio').addClass('large-radios');
+		jQuery('#unknown_user .input-checkbox').addClass('large-checkboxes');
+		jQuery('.large-radios .ak-userfield-radio-choice.ak-userfield-radio-choice').each(function(i, v) {
+			jQuery(v).contents().eq(1).wrap('<span class="larger-radios-choice-label"/>');
+		});
+		jQuery('#unknown_user .large-checkboxes.input-checkbox .ak-userfield-checkbox-choice').append(jQuery('<span class="checkmark"/>'));
+
 	});
 </script>
 {% endif %}
